force-app/main/default/objects/Device_Event__c/Device_Event__c.object-meta.xml
<CustomObject>
    <label>Device Event</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>