force-app/main/default/objects/Device_Event__c/fields/Alert_Create_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Alert_Create_DateTime__c</fullName>
    <label>Alert Create DateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>