force-app/main/default/objects/Device_Event__c/fields/Alert_Id__c.field-meta.xml
<CustomField>
    <fullName>Alert_Id__c</fullName>
    <label>Alert Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>