force-app/main/default/objects/Device_Event__c/fields/Case_Flow_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Case_Flow_Outcome__c</fullName>
    <label>Process Status</label>
    <type>TextArea</type>
</CustomField>