force-app/main/default/objects/Device_Event__c/fields/Component_Id__c.field-meta.xml
<CustomField>
    <fullName>Component_Id__c</fullName>
    <label>Component Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>