force-app/main/default/objects/Device_Event__c/fields/Device_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Device_Event_ID__c</fullName>
    <externalId>true</externalId>
    <label>Device Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>