force-app/main/default/objects/Device_Event__c/fields/Log_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Log_File_Name__c</fullName>
    <label>Log File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>