force-app/main/default/objects/Device_Event__c/fields/Message_Details__c.field-meta.xml
<CustomField>
    <fullName>Message_Details__c</fullName>
    <label>Message Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>