force-app/main/default/objects/Device_Event__c/fields/Presigned_URL__c.field-meta.xml
<CustomField>
    <fullName>Presigned_URL__c</fullName>
    <label>Presigned URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>