force-app/main/default/objects/Device_Event__c/fields/Raw_Message__c.field-meta.xml
<CustomField>
    <fullName>Raw_Message__c</fullName>
    <label>Raw Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>