force-app/main/default/objects/Device_Event__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <label>System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>