force-app/main/default/objects/Device_Event__c/fields/System_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>System_Serial_Number__c</fullName>
    <label>System Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>