force-app/main/default/objects/Device_Event__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>NAME</columns>
    <columns>Asset__c</columns>
    <columns>System_Name__c</columns>
    <columns>Device_Event_ID__c</columns>
    <columns>Alert_Create_DateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Message__c</columns>
    <columns>Log_File_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Events</label>
</ListView>