force-app/main/default/objects/Device_Event__c/listViews/Cleared_Device_Events.listView-meta.xml
<ListView>
    <fullName>Cleared_Device_Events</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Asset__c</columns>
    <columns>Case__c</columns>
    <columns>Severity__c</columns>
    <columns>Case_Flow_Outcome__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Severity__c</field>
        <operation>equals</operation>
        <value>Cleared</value>
    </filters>
    <label>Cleared Device Events</label>
</ListView>