force-app/main/default/objects/Device_Event__c/listViews/Device_Events_Created_Today.listView-meta.xml
<ListView>
    <fullName>Device_Events_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Asset__c</columns>
    <columns>Case__c</columns>
    <columns>Severity__c</columns>
    <columns>Case_Flow_Outcome__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Device Events Created Today</label>
</ListView>